cabal-version:      2.4
name:               rados
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         james.hobson@jotron.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable rados
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: System.IO.Rados.Base,
                   System.IO.Rados.Error,
                   Network.API

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0,
                      inline-c,
                      mtl,
                      bytestring,
                      bits

    -- extra-libraries:  rados
    hs-source-dirs:   app
    default-language: Haskell2010
