cabal-version:      2.4
name:               rados
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         james.hobson@jotron.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library

    -- Modules included in this executable, other than Main.
    exposed-modules: System.IO.Rados
    other-modules:   System.IO.Rados.Error

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base < 5.0,
                      inline-c,
                      mtl,
                      bytestring >= 0.11.0.0,
                      bits,

    extra-libraries:  rados
    hs-source-dirs:   src
    default-language: Haskell2010
